[Feat]: Es posible crear user_profile con los valores de sus campos asignables
